--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
       </div>
         <div class="intro_devices">
           <div class="intro_deivce intro_device--left">
-            <img src="C:\Users\Людмила\Desktop\академия\task1\img\left_phone.png" alt="left-device" >
+            <img src="img\left_phone.png" alt="left-device" >
           </div>
           <div class="intro_deivce intro_device--center">
-            <img src="C:\Users\Людмила\Desktop\академия\task1\img\center_phone.png" alt="center-device" >
+            <img src="img\center_phone.png" alt="center-device" >
           </div>
           <div class="intro_deivce intro_device--right">
-            <img src="C:\Users\Людмила\Desktop\академия\task1\img\right_phone.png" alt="right-device" >
+            <img src="img\right_phone.png" alt="right-device" >
           </div>
         </div>
 
@@ -57,19 +57,19 @@
     <div class="features" id="features">
       <section class="features_inner">
         <div class="feature">
-          <img src="C:\Users\Людмила\Desktop\академия\task1\img\Icon_1.png" alt="">
+          <img src="img\Icon_1.png" alt="">
           <div class="feature_title">Analysis</div>
           <div class="feature_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore</div>
         </div>
 
         <div class="feature">
-          <img src="C:\Users\Людмила\Desktop\академия\task1\img\Icon_2.png" alt="">
+          <img src="img\Icon_2.png" alt="">
           <div class="feature_title">Clean Design</div>
           <div class="feature_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore</div>
         </div>
 
         <div class="feature">
-          <img src="C:\Users\Людмила\Desktop\академия\task1\img\Icon_3.png" alt="">
+          <img src="img\Icon_3.png" alt="">
           <div class="feature_title">Messaging</div>
           <div class="feature_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore</div>
         </div>
@@ -83,10 +83,10 @@
         <div class="about_item">
           <div class="about_pic">
             <div class="about_pic pic-1">
-              <img src="C:\Users\Людмила\Desktop\академия\task1\img\Image 2.png" alt="">
+              <img src="img\Image 2.png" alt="">
             </div>
             <div class="about_pic pic-2">
-              <img src="C:\Users\Людмила\Desktop\академия\task1\img\Image 2-2.png" alt="">
+              <img src="img\Image 2-2.png" alt="">
             </div>
           </div>
 
@@ -119,29 +119,29 @@
         <div class="section_title">
           <p>How Does It Works?</p>
           <div class="title_icon">
-            <img src="C:\Users\Людмила\Desktop\академия\task1\img\2.png" alt="">
+            <img src="img\2.png" alt="">
           </div>
         </div>
 
         <div class="section_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet.</div>
         <div class="how_items">
           <div class="how_line">
-            <img src="C:\Users\Людмила\Desktop\академия\task1\img\Line.png" alt="">
+            <img src="img\Line.png" alt="">
           </div>
           <div class="how_item">
-            <img src="C:\Users\Людмила\Desktop\академия\task1\img\Icon.png" alt="">
+            <img src="img\Icon.png" alt="">
             <div class="how_subtitle">Create An Account</div>
             <div class="how_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</div>
           </div>
 
           <div class="how_item">
-            <img src="C:\Users\Людмила\Desktop\академия\task1\img\Icon-2.png" alt="">
+            <img src="img\Icon-2.png" alt="">
             <div class="how_subtitle">Confirm Email</div>
             <div class="how_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</div>
           </div>
 
           <div class="how_item">
-            <img src="C:\Users\Людмила\Desktop\академия\task1\img\Icon-3.png" alt="">
+            <img src="img\Icon-3.png" alt="">
             <div class="how_subtitle">See Results</div>
             <div class="how_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</div>
           </div>
@@ -161,7 +161,7 @@
           </div>
 
           <div class="plan_item">
-            <img src="C:\Users\Людмила\Desktop\академия\task1\img\Paper_plane.png" alt="Paper plane">
+            <img src="img\Paper_plane.png" alt="Paper plane">
             <div class="plan_title">Standart</div>
             <div class="plan_text">
               <ul>
@@ -177,7 +177,7 @@
           </div>
 
           <div class="plan_item">
-            <img src="C:\Users\Людмила\Desktop\академия\task1\img\Rocket.png" alt="Rocket">
+            <img src="img\Rocket.png" alt="Rocket">
             <div class="plan_title">Premium</div>
             <div class="plan_text">
               <ul>
@@ -196,7 +196,7 @@
 
 
       <div class="trusted">
-        <img src="C:\Users\Людмила\Desktop\академия\task1\img\item_5.png" alt="Hands">
+        <img src="img\item_5.png" alt="Hands">
         <div class="trusted_inner">
           <div class="trusted_header">Trusted By More Than 55M Peoples</div>
           <div class="trusted_carousel">
@@ -216,7 +216,7 @@
         <div class="section_title">
           <p>Latest News From Us</p>
           <div class="title_icon">
-            <img src="C:\Users\Людмила\Desktop\академия\task1\img\2.png" alt="">
+            <img src="img\2.png" alt="">
           </div>
         </div>
         <div class="section_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet.</div>
@@ -236,7 +236,7 @@
             <a href="#">
               <div class="article">
                 <div class="article_img">
-                  <img src="C:\Users\Людмила\Desktop\академия\task1\img\latest news2.png.png" alt="">
+                  <img src="img\latest news2.png.png" alt="">
                 </div>
                 <div class="article_item">
                   <div class="article_title">The master bedroom suite is phenomenally spacious</div>
@@ -248,7 +248,7 @@
             <a href="#">
               <div class="article">
                 <div class="article_img">
-                  <img src="C:\Users\Людмила\Desktop\академия\task1\img\latest news3.png.png" alt="">
+                  <img src="img\latest news3.png.png" alt="">
                 </div>
                 <div class="article_item">
                   <div class="article_title">The master bedroom suite is phenomenally spacious</div>
@@ -260,7 +260,7 @@
             <a href="#">
               <div class="article">
                 <div class="article_img">
-                  <img src="C:\Users\Людмила\Desktop\академия\task1\img\latest news4.png.png" alt="">
+                  <img src="img\latest news4.png.png" alt="">
                 </div>
                   <div class="article_item">
                   <div class="article_title">The master bedroom suite is phenomenally spacious</div>
