--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name = "viewport" content ="width=device-width, initial-scale=1">
-    <link href="style1.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <title>AppSon</title>
  </head>
 <body>
