--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>AppSon</title>
  </head>
 <body>
+  <a name='top'></a>
   <header>
     <div class="logo_name">AppSon</div>
     <div class="header_navigation">
@@ -203,7 +204,7 @@
             <div class="carousel_elem">
               <div class="elem_header">
                 <div class="elem_name">Raisa Moni</div>
-                <div class="elem_icon"><i class="fab fa-twitter"></i></div>
+                <div class="elem_icon"><img src="img/Twitter icon.png" alt="twitter icon"><i class="fab fa-twitter"></i></div>
               </div>
               <div class="elem_status">Envato Customer</div>
               <div class="elem_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore etamet.</div>
@@ -224,7 +225,7 @@
           <a href="#">
             <div class="articles articles--main">
               <div class="article_img">
-                <img src="C:\Users\Людмила\Desktop\академия\task1\img\latest news1.png.png" alt="">
+                <img src="img\latest news1.png.png" alt="">
               </div>
               <div class="main_title">The master bedroom suite is phenomenally spacious</div>
               <div class="main_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</div>
@@ -296,6 +297,7 @@
 
     <footer>
       <section class="footer_inner">
+        <a href='#top' id='button_up'><img src='img/arrow.png'></a>
         <div class="copyright">© 2018 Copyright, All Rights Reserved by AppSon</div>
         <nav class="footer_nav">
           <a href="#" target="_blank">Terms & Condition </a>
