--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
 
   <div class="intro" >
     <section class="intro_inner">
+      <div class="intro_desc">
       <div class="intro_title">Best Desktop App for You</div>
       <div class="intro_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
       <div class="intro_buttons">
         <button type="button" name="download" class="intro_button intro_button--download">Download</button>
         <button type="button" name="free trial" class="intro_button">Free Trial</button>
+      </div>
       </div>
         <div class="intro_devices">
           <div class="intro_deivce intro_device--left">
@@ -102,10 +104,12 @@
 
         <div class="about_item">
           <div class="about_desc">
+            <div class="about_desc desc_2">
             <div class="about_title">Keep In Touch</div>
             <div class="about_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
             <div class="read_more">
               <a href="#">Read More <i class="fas fa-arrow-right"></i></a>
+             </div>
             </div>
           </div>
 
